--- a/views/register.jade
+++ b/views/register.jade
@@ -6,20 +6,25 @@ block content
     .card.card-body
       h1.text-center.mb-3
         i.fas.fa-user-plus
-        |  Register
+        |   Register
+        include ./partials/messages 
       form(action='/users/register', method='POST')
         .form-group
           label(for='name') Name
-          input#name.form-control(type='name', name='name', placeholder='Enter Name', value="")
+          input#name.form-control(type='name', name='name', placeholder='Enter Name', 
+            value=typeof name != 'undefined' ? name : '')
         .form-group
           label(for='email') Email
-          input#email.form-control(type='email', name='email', placeholder='Enter Email', value="")
+          input#email.form-control(type='email', name='email', placeholder='Enter Email',
+            value=typeof email != 'undefined' ? email : '')
         .form-group
           label(for='password') Password
-          input#password.form-control(type='password', name='password', placeholder='Create Password', value="")
+          input#password.form-control(type='password', name='password', placeholder='Create Password',
+            value=typeof password != 'undefined' ? password : '')
         .form-group
           label(for='password2') Confirm Password
-          input#password2.form-control(type='password', name='password2', placeholder='Confirm Password', value="")
+          input#password2.form-control(type='password', name='password2', placeholder='Confirm Password',
+            value=typeof password2 != 'undefined' ? password2 : '')
         button.btn.btn-primary.btn-block(type='submit')
           | Register
       p.lead.mt-4
