--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,12 +1,14 @@
-<% if(typeof errors != 'undefined'){ %> <% errors.forEach(function(error) { %>
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <%= error.msg %>
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-<% }); %> 
+<% if(typeof errors != 'undefined'){ %> 
+  <% errors.forEach(function(error) { %>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <%= error.msg %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  <% }); %> 
 <% } %>
+
 <% if(success_msg != ''){ %>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
   <%= success_msg %>
@@ -15,6 +17,7 @@
   </button>
 </div>
 <% } %>
+
 <% if(error_msg != ''){ %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
   <%= error_msg %>
@@ -23,6 +26,7 @@
   </button>
 </div>
 <% } %>
+
 <% if(error != ''){ %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
   <%= error %>
