--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,12 @@
 <nav class="navbar navbar-light bg-light static-top">
   <div class="container">
     <a href="#" class="navbar-brand">Tie</a>
-    <a href="/users/login" class="btn btn-primary my-2 my-sm-0">Sign In</a>
+    <%if(login) { %>
+      <a href="/dashboard" class="btn btn-primary my-2 my-sm-0">My Page</a>
+      <a href="/users/logout" class="btn btn-primary my-2 my-sm-0">Sign Out</a>
+    <% } else { %>
+      <a href="/users/login" class="btn btn-primary my-2 my-sm-0">Sign In</a>
+    <% } %>
   </div>
 </nav>
 <!-- Icons Grid-->
@@ -53,30 +58,30 @@
           </div>
        </div>
     </div>
- </section>
- <!-- Footer-->
- <footer class="footer bg-light">
-    <div class="container">
-       <div class="row">
-          <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-             <ul class="list-inline mb-2">
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item">⋅</li>
-                <li class="list-inline-item"><a href="#">Contact</a></li>
-                <li class="list-inline-item">⋅</li>
-                <li class="list-inline-item"><a href="#">Terms of Use</a></li>
-                <li class="list-inline-item">⋅</li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-             </ul>
-             <p class="text-muted small mb-4 mb-lg-0">© Tie 2018. All Rights Reserved.</p>
-          </div>
-          <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-             <ul class="list-inline mb-0">
-                <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-facebook fa-2x fa-fw"></i></a></li>
-                <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter-square fa-2x fa-fw"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-2x fa-fw"></i></a></li>
-             </ul>
-          </div>
-       </div>
-    </div>
- </footer>
+</section>
+<!-- Footer-->
+<footer class="footer bg-light">
+   <div class="container">
+      <div class="row">
+         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+            <ul class="list-inline mb-2">
+               <li class="list-inline-item"><a href="#">About</a></li>
+               <li class="list-inline-item">⋅</li>
+               <li class="list-inline-item"><a href="#">Contact</a></li>
+               <li class="list-inline-item">⋅</li>
+               <li class="list-inline-item"><a href="#">Terms of Use</a></li>
+               <li class="list-inline-item">⋅</li>
+               <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="text-muted small mb-4 mb-lg-0">© Tie 2018. All Rights Reserved.</p>
+         </div>
+         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+            <ul class="list-inline mb-0">
+               <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-facebook fa-2x fa-fw"></i></a></li>
+               <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter-square fa-2x fa-fw"></i></a></li>
+               <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-2x fa-fw"></i></a></li>
+            </ul>
+         </div>
+      </div>
+   </div>
+</footer>
