--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,14 +11,15 @@
   <div class="container">
     <div class="row">
       <% for(var i=0; i < games.length; i++) { %>
-      <div class="col-lg-4">
-        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-          <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
-          <h3><%= games[i].title %></h3>
-          <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
-        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
+            <h3><%= games[i].title %></h3>
+            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+          </div>
       </div>
       <% } %>
     </div>
+    <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New game</a>
   </div>
 </section>
