--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,25 +1,30 @@
-<nav class="navbar navbar-light bg-light static-top">
-  <div class="container">
-    <a href="/" class="navbar-brand">Tie</a>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<section class="features-icons text-center">
-  <div class="container">
-    <div class="row">
-      <% for(var i=0; i < games.length; i++) { %>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
-            <h3><%= games[i].title %></h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Tie</title>
+    <% include partials/commonMeta %>
+    <% include partials/commonCss %>
+  </head>
+
+  <body>
+    <% include partials/navbar %>
+    <section class="features-icons text-center">
+      <div class="container">
+        <div class="row">
+          <% for(var i=0; i < games.length; i++) { %>
+            <div class="col-lg-4">
+              <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
+                <h3><%= games[i].title %></h3>
+                <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              </div>
           </div>
+          <% } %>
+        </div>
+        <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New game</a>
       </div>
-      <% } %>
-    </div>
-    <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New game</a>
-  </div>
-</section>
+    </section>
+    <% include partials/footer %>
+    <% include partials/commonJs %>
+  </body>
+</html>
