--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,87 +1,63 @@
-<!-- Navigation -->
-<nav class="navbar navbar-light bg-light static-top">
-   <div class="container">
-      <a href="#" class="navbar-brand">Tie</a>
-      <%if(login) { %>
-         <a href="/dashboard" class="btn btn-primary my-2 my-sm-0">My Page</a>
-         <a href="/users/logout" class="btn btn-primary my-2 my-sm-0">Sign Out</a>
-      <% } else { %>
-         <a href="/users/login" class="btn btn-primary my-2 my-sm-0">Sign In</a>
-      <% } %>
-   </div>
-</nav>
-<!-- Icons Grid-->
-<section class="features-icons text-center">
-   <div class="container">
-      <div class="row">
-         <div class="col-lg-4">
-            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-               <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
-               <h3>Fully Responsive</h3>
-               <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <title>Tie</title>
+      <% include partials/commonMeta %>
+      <% include partials/commonCss %>
+   </head>
+   <body>
+      <% include partials/navbar %>
+      <!-- Icons Grid-->
+      <section class="features-icons text-center">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-4">
+                  <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                     <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
+                     <h3>Fully Responsive</h3>
+                     <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                  </div>
+               </div>
+               <div class="col-lg-4">
+                  <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                     <div class="features-icons-icon d-flex"><i class="icon-layers m-auto text-primary"></i></div>
+                     <h3>Bootstrap 4 Ready</h3>
+                     <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+                  </div>
+               </div>
+               <div class="col-lg-4">
+                  <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                     <div class="features-icons-icon d-flex"><i class="icon-check m-auto text-primary"></i></div>
+                     <h3>Easy to Use</h3>
+                     <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                  </div>
+               </div>
+               <div class="col-lg-4">
+                  <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                     <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
+                     <h3>Fully Responsive</h3>
+                     <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                  </div>
+               </div>
+               <div class="col-lg-4">
+                  <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                     <div class="features-icons-icon d-flex"><i class="icon-layers m-auto text-primary"></i></div>
+                     <h3>Bootstrap 4 Ready</h3>
+                     <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+                  </div>
+               </div>
+               <div class="col-lg-4">
+                  <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                     <div class="features-icons-icon d-flex"><i class="icon-check m-auto text-primary"></i></div>
+                     <h3>Easy to Use</h3>
+                     <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                  </div>
+               </div>
             </div>
          </div>
-         <div class="col-lg-4">
-            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-               <div class="features-icons-icon d-flex"><i class="icon-layers m-auto text-primary"></i></div>
-               <h3>Bootstrap 4 Ready</h3>
-               <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
-            </div>
-         </div>
-         <div class="col-lg-4">
-            <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-               <div class="features-icons-icon d-flex"><i class="icon-check m-auto text-primary"></i></div>
-               <h3>Easy to Use</h3>
-               <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
-            </div>
-         </div>
-         <div class="col-lg-4">
-            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-               <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
-               <h3>Fully Responsive</h3>
-               <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
-            </div>
-         </div>
-         <div class="col-lg-4">
-            <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-               <div class="features-icons-icon d-flex"><i class="icon-layers m-auto text-primary"></i></div>
-               <h3>Bootstrap 4 Ready</h3>
-               <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
-            </div>
-         </div>
-         <div class="col-lg-4">
-            <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-               <div class="features-icons-icon d-flex"><i class="icon-check m-auto text-primary"></i></div>
-               <h3>Easy to Use</h3>
-               <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
-            </div>
-         </div>
-      </div>
-   </div>
-</section>
-<!-- Footer-->
-<footer class="footer bg-light">
-   <div class="container">
-      <div class="row">
-         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-            <ul class="list-inline mb-2">
-               <li class="list-inline-item"><a href="#">About</a></li>
-               <li class="list-inline-item">⋅</li>
-               <li class="list-inline-item"><a href="#">Contact</a></li>
-               <li class="list-inline-item">⋅</li>
-               <li class="list-inline-item"><a href="#">Terms of Use</a></li>
-               <li class="list-inline-item">⋅</li>
-               <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">© Tie 2018. All Rights Reserved.</p>
-         </div>
-         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-            <ul class="list-inline mb-0">
-               <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-facebook fa-2x fa-fw"></i></a></li>
-               <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter-square fa-2x fa-fw"></i></a></li>
-               <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-2x fa-fw"></i></a></li>
-            </ul>
-         </div>
-      </div>
-   </div>
-</footer>
+      </section>
+      <% include partials/footer %>
+      <% include partials/commonJs %>
+   </body>
+</html>
+
