--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,24 +1,38 @@
-<div class="row mt-5">
-  <div class="col-md-6 m-auto">
-    <div class="card card-body">
-      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Create a new project</h1>
-      <!-- <% include ./partials/messages %> -->
-      <form action="/game/create" enctype="multipart/form-data" method="POST">
-        <div class="form-group">
-          <label for="title">Title</label>
-          <input
-            type="title"
-            id="title"
-            name="title"
-            class="form-control"
-            placeholder=""
-          />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Tie</title>
+    <% include partials/commonMeta %>
+    <% include partials/commonCss %>
+  </head>
+
+  <body>
+    <% include partials/navbar %>
+    <div class="row mt-5">
+      <div class="col-md-6 m-auto">
+        <div class="card card-body">
+          <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Create a new project</h1>
+          <!-- <% include ./partials/messages %> -->
+          <form action="/game/create" enctype="multipart/form-data" method="POST">
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input
+                type="title"
+                id="title"
+                name="title"
+                class="form-control"
+                placeholder=""
+              />
+            </div>
+            <div class="form-group">
+              <input type="file" id="file" name="file" accept=".zip,.html">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block"> Save </button>
+          </form>
         </div>
-        <div class="form-group">
-          <input type="file" id="file" name="file" accept=".zip,.html">
-        </div>
-        <button type="submit" class="btn btn-primary btn-block"> Save </button>
-      </form>
+      </div>
     </div>
-  </div>
-</div>
+    <% include partials/footer %>
+    <% include partials/commonJs %>
+  </body>
+</html>
