--- a/views/partials/commonCss.ejs
+++ b/views/partials/commonCss.ejs
@@ -5,3 +5,4 @@
     crossorigin="anonymous">
 <!-- Custom styles for this template-->
 <link href="stylesheets/landing-page.min.css" rel="stylesheet">
+<link href="stylesheets/main.css" rel="stylesheet">
