--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,7 +16,7 @@
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
                 <h3><%= games[i].title %></h3>
-                <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                <p class="lead mb-0"><%= games[i].description %></p>
               </div>
           </div>
           <% } %>
