--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -24,9 +24,21 @@
                 placeholder=""
               />
             </div>
+            <label for="title">Uploads</label>
             <div class="form-group">
-              <input type="file" id="file" name="file" accept=".zip,.html">
+              <input type="file" id="file" name="file" accept=".zip">
             </div>
+            <div class="form-group">
+                <label for="title">Description</label>
+                <input
+                  type="text"
+                  id="description"
+                  name="description"
+                  class="form-control"
+                  placeholder=""
+                  style="height:200px;" 
+                />
+              </div>
             <button type="submit" class="btn btn-primary btn-block"> Save </button>
           </form>
         </div>
