--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -13,7 +13,7 @@
         <div class="card card-body">
           <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Create a new project</h1>
           <!-- <% include ./partials/messages %> -->
-          <form action="/game/create" enctype="multipart/form-data" method="POST">
+          <form action="/game/upload" method="POST" enctype="multipart/form-data">
             <div class="form-group">
               <label for="title">Title</label>
               <input
@@ -26,7 +26,7 @@
             </div>
             <label for="title">Uploads</label>
             <div class="form-group">
-              <input type="file" id="file" name="file" accept=".zip">
+              <input type="file" id="file" name="file">
             </div>
             <div class="form-group">
                 <label for="title">Description</label>
