--- a/views/partials/commonCss.ejs
+++ b/views/partials/commonCss.ejs
@@ -4,4 +4,4 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
 <!-- Custom styles for this template-->
-<link href="../../public/stylesheets/landing-page.min.css" rel="stylesheet">
+<link href="stylesheets/landing-page.min.css" rel="stylesheet">
