--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -26,19 +26,23 @@
             </div>
             <label for="title">Uploads</label>
             <div class="form-group">
-              <input type="file" id="file" name="file">
+              <input type="file" id="sourceFiles" name="sourceFiles" accept=".html,.css,.js" multiple>
             </div>
             <div class="form-group">
-                <label for="title">Description</label>
-                <input
-                  type="text"
-                  id="description"
-                  name="description"
-                  class="form-control"
-                  placeholder=""
-                  style="height:200px;" 
-                />
-              </div>
+              <label for="title">Description</label>
+              <input
+                type="text"
+                id="description"
+                name="description"
+                class="form-control"
+                placeholder=""
+                style="height:200px;" 
+              />
+            </div>
+            <label for="title">Upload Cover Image</label>
+            <div class="form-group">
+              <input type="file" id="imageFile" name="imageFile" accept=".png,.jpeg">
+            </div>
             <button type="submit" class="btn btn-primary btn-block"> Save </button>
           </form>
         </div>
