--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -13,7 +13,7 @@
         <div class="card card-body">
           <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Create a new project</h1>
           <!-- <% include ./partials/messages %> -->
-          <form action="/game/create" enctype="multipart/form-data" method="POST">
+          <form action="/game/upload" method="POST" enctype="multipart/form-data">
             <div class="form-group">
               <label for="title">Title</label>
               <input
@@ -24,8 +24,24 @@
                 placeholder=""
               />
             </div>
+            <label for="title">Uploads</label>
             <div class="form-group">
-              <input type="file" id="file" name="file" accept=".zip,.html">
+              <input type="file" id="sourceFiles" name="sourceFiles" accept=".html,.css,.js" multiple>
+            </div>
+            <div class="form-group">
+              <label for="title">Description</label>
+              <input
+                type="text"
+                id="description"
+                name="description"
+                class="form-control"
+                placeholder=""
+                style="height:200px;" 
+              />
+            </div>
+            <label for="title">Upload Cover Image</label>
+            <div class="form-group">
+              <input type="file" id="imageFile" name="imageFile" accept=".png,.jpeg">
             </div>
             <button type="submit" class="btn btn-primary btn-block"> Save </button>
           </form>
