--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
             <div class="col-lg-4">
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
-                <h3><%= games[i].title %></h3>
+                <h3><%= games[i].displayTitle %></h3>
                 <p class="lead mb-0"><%= games[i].description %></p>
               </div>
           </div>
