--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
                <% for(var i = 0; i < games.length; i++) {%>
                   <div class="col-lg-4">
                      <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                        <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
-                        <h3><a href="game/<%= games[i].id %>">><%= games[i].displayTitle %></a></h3>
+                        <img src="<%= games[i].thumbnail %>" height="200px" width="200px" />
+                        <h3><a href="game/<%= games[i].title %>"><%= games[i].title %></a></h3>
                         <p class="lead mb-0"><%= games[i].description %></p>
                      </div>
                   </div>
