Add connectionManager (using postMessage)

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -12,6 +12,8 @@
     
     <iframe name="gamebox" src="https://s3.us-east-2.amazonaws.com/tie-cs-494-demo/<%= game.title %>/index.html" width="750px" height="750px"></iframe>
     
+    <script src="javascripts/connectionManager.js"></script>
+    <script src="javascripts/gameConnector.js"></script>
     <% include partials/commonJs %>
     <% include partials/footer %>
 </html>
