--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                   <div class="col-lg-4">
                      <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                         <img src="<%= games[i].thumbnail %>" height="200px" width="200px" />
-                        <h3><a href="game/<%= games[i].title %>"><%= games[i].title %></a></h3>
+                        <h3><a href="game/<%= games[i].title %>"><%= games[i].displayTitle %></a></h3>
                         <p class="lead mb-0"><%= games[i].description %></p>
                      </div>
                   </div>
