Feature/connection manager (#18)
* Remove TETRIS game from the server

* Add connectionManager (using postMessage)

* Fix connectionManager

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -10,8 +10,10 @@
 <body>
     <% include partials/navbar %>
     
-    <iframe name="gamebox" src="https://s3.us-east-2.amazonaws.com/tie-cs-494-demo/<%= game.title %>/index.html" width="750px" height="750px"></iframe>
+    <iframe name="gamebox" src="http://s3.us-east-2.amazonaws.com/tie-cs-494-demo/<%= game.title %>/index.html" width="750px" height="750px"></iframe>
     
+    <script src="/javascripts/connectionManager.js"></script>
+    <script src="/javascripts/gameConnector.js"></script>
     <% include partials/commonJs %>
     <% include partials/footer %>
 </html>
