--- a/views/game.ejs
+++ b/views/game.ejs
@@ -10,7 +10,13 @@
 <body>
     <% include partials/navbar %>
     
-    <iframe name="gamebox" src="http://s3.us-east-2.amazonaws.com/tie-cs-494-demo/<%= game.title %>/index.html" width="750px" height="750px"></iframe>
+    <div class="gameWrapper" align="center" style="margin-top: 25px; margin-bottom: 25px">
+        <iframe name="gamebox"
+            src="https://s3.us-east-2.amazonaws.com/tie-cs-494-demo/<%= game.title %>/index.html" 
+            width="750px" 
+            height="750px">
+        </iframe>
+    </div>
     
     <script src="/javascripts/connectionManager.js"></script>
     <script src="/javascripts/gameConnector.js"></script>
