--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,17 +9,22 @@
 
 <body>
     <% include partials/navbar %>
-    
-    <div class="gameWrapper" align="center" style="margin-top: 25px; margin-bottom: 25px">
+
+   <div class="gameWrapper" align="center" style="margin-top: 25px; margin-bottom: 25px">
         <iframe name="gamebox"
             src="https://s3.us-east-2.amazonaws.com/tie-cs-494-demo/<%= game.title %>/index.html" 
             width="750px" 
             height="750px">
         </iframe>
+    </div>    
+    <div>
+        <input id="linkBox" type="text" name="link">
+        <button id="shareButton" class="btn btn-primary my-2 my-sm-0">Share link</a>
     </div>
-    
+
     <script src="/javascripts/connectionManager.js"></script>
     <script src="/javascripts/gameConnector.js"></script>
     <% include partials/commonJs %>
     <% include partials/footer %>
+
 </html>
