--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,9 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-        <a href="/" class="navbar-brand">Tie</a>
+        <a href="/" class="navbar-brand">
+            <img width="100px" src="https://s3.us-east-2.amazonaws.com/tie-cs-494-demo/tie_transparent.png">
+        </a>
         <div class="navbar-right">
             <%if(login) { %>
             <a href="/dashboard" class="btn btn-primary my-2 my-sm-0">My Page</a>
