--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,14 +14,16 @@
           <% for(var i=0; i < games.length; i++) { %>
             <div class="col-lg-4">
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                <div class="features-icons-icon d-flex"><i class="icon-screen-desktop m-auto text-primary"></i></div>
+                <img src="<%= games[i].thumbnail %>" height="200px" width="200px" />
                 <h3><%= games[i].displayTitle %></h3>
                 <p class="lead mb-0"><%= games[i].description %></p>
               </div>
           </div>
           <% } %>
+          <div class="col-lg-4">
+            <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New Game</a>
+          </div>
         </div>
-        <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New game</a>
       </div>
     </section>
     <% include partials/footer %>
