--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,10 +20,12 @@
               </div>
           </div>
           <% } %>
-          <div class="col-lg-4">
-            <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New Game</a>
-          </div>
         </div>
+        <div class="row justify-content-center" style="padding-top: 25px;">
+            <div class="col-4">
+                <a href="/game/new" class="btn btn-primary my-2 my-sm-0">New Game</a>
+            </div>
+          </div>
       </div>
     </section>
     <% include partials/footer %>
