--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -29,7 +29,7 @@
               <input type="file" id="sourceFiles" name="sourceFiles" accept=".html,.css,.js" multiple>
             </div>
             <div class="form-group">
-              <label for="title">Description</label>
+              <label for="description">Description</label>
               <input
                 type="text"
                 id="description"
